[gd_scene load_steps=4 format=2]

[ext_resource path="res://selectmenu.gd" type="Script" id=1]
[ext_resource path="res://sprites/home.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

[node name="CanvasLayer" type="Control"]
script = ExtResource( 1 )

[node name="Node2D" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Node2D"]
position = Vector2( 160.542, 299.547 )
scale = Vector2( 0.956044, 0.785216 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 2, 1542, 342, 768 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite2" type="Sprite" parent="Node2D"]
position = Vector2( 502.093, 300.046 )
scale = Vector2( 0.937674, 0.880328 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 346, 1542, 386, 683 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite3" type="Sprite" parent="Node2D"]
position = Vector2( 855.023, 299.623 )
scale = Vector2( 1.01135, 0.791975 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 687, 772, 341, 768 )
__meta__ = {
"_edit_lock_": true
}

[node name="Banda" type="Node2D" parent="Node2D"]
z_index = 1

[node name="Sprite" type="Sprite" parent="Node2D/Banda"]
position = Vector2( 164.3, 191.432 )
rotation = -1.5708
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 951, 1542, 60, 197 )

[node name="Sprite2" type="Sprite" parent="Node2D/Banda"]
position = Vector2( 164.3, 333.122 )
rotation = -1.5708
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 1863, 2, 154, 296 )

[node name="banda" type="Area2D" parent="Node2D/Banda"]
editor/display_folded = true
scale = Vector2( 15, 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Banda/banda"]
position = Vector2( 10.6953, 33.5811 )
shape = SubResource( 1 )

[node name="Son" type="Node2D" parent="Node2D"]
z_index = 1

[node name="Sprite" type="Sprite" parent="Node2D/Son"]
position = Vector2( 515.856, 458.231 )
rotation = -1.5708
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 1875, 2022, 71, 116 )

[node name="Sprite2" type="Sprite" parent="Node2D/Son"]
position = Vector2( 521.54, 272.829 )
rotation = -1.5708
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 1612, 1123, 281, 209 )

[node name="son" type="Area2D" parent="Node2D/Son"]
editor/display_folded = true
scale = Vector2( 15, 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Son/son"]
position = Vector2( 33.9665, 30.9088 )
shape = SubResource( 1 )

[node name="Huapango" type="Node2D" parent="Node2D"]
z_index = 1

[node name="Sprite4" type="Sprite" parent="Node2D/Huapango"]
position = Vector2( 856.515, 191.432 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 2, 2312, 297, 73 )

[node name="Sprite5" type="Sprite" parent="Node2D/Huapango"]
position = Vector2( 859.184, 351.21 )
rotation = -1.5708
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 1546, 1732, 185, 301 )

[node name="huapango" type="Area2D" parent="Node2D/Huapango"]
editor/display_folded = true
scale = Vector2( 15, 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Huapango/huapango"]
position = Vector2( 57.015, 32.746 )
shape = SubResource( 1 )
[connection signal="input_event" from="Node2D/Banda/banda" to="." method="_on_banda_input_event"]
[connection signal="input_event" from="Node2D/Son/son" to="." method="_on_son_input_event"]
[connection signal="input_event" from="Node2D/Huapango/huapango" to="." method="_on_huapango_input_event"]
